# stock-app-tapyr

./: pyproject.toml
