[tool.poetry]
name = "stock_app_tapyr"
version = "0.1.0"
description = ""
authors = ["Appsilon.com <hello@appsilon.com>"]
readme = "README.md"
packages = [{include = "stock_app_tapyr"}]

[tool.coverage.run]
source = ["stock_app_tapyr"]

[tool.poetry.dependencies]
python = "^3.10"
shiny = "^0.9.0"
rich = "^13.7.1"
loguru = "^0.7.2"
pydantic-settings = "^2.2.1"
python-dotenv = "^1.0.1"
plotly = "^5.21.0"
yfinance = "^0.2.38"
pandas = "^2.2.2"
shinywidgets = "^0.3.2"
faicons = "^0.2.2"
cufflinks = "^0.17.3"

[tool.poetry.group.dev.dependencies]
icecream = "^2.1.3"  # For debugging, print() on steroids
ipykernel = "^6.29.4"  # For running Jupyter notebooks in VS Code
ipywidgets = "^8.1.2"  # For running Jupyter notebooks in VS Code
pre-commit = "^3.7.0"
ruff = "^0.4.1"
rsconnect-python = "^1.23.0"
pytest = "^8.1.1"
playwright = "^1.43.0"
pytest-playwright = "^0.4.4"
requests = "^2.32.2"
tenacity = "^8.2.3"
pytest-watch = "^4.2.0"
pytest-cov = "^5.0.0"
pyright = "^1.1.360"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = "--cov . --cov-report=lcov:lcov.info --cov-report=term"
filterwarnings = [
    # This warning is caused by the `jupyter_client` package and is not relevant to us
    "ignore:Jupyter is migrating its paths to use standard platformdirs.*:DeprecationWarning:jupyter_client.connect"
]
